# fetch

./: .gitignore  README.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Logo.tsx  OptionCard.tsx  StatusChip.tsx  Timeline.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/pages/: Landing.tsx  Quest.tsx
orchestrator/: .env.example  package-lock.json  package.json
orchestrator/migrations/: 001_init.sql  002_real_integration.sql
orchestrator/scripts/: bootstrap-locus.js  deploy-cloudrun.sh  migrate.js  smoke-pipeline.mjs
orchestrator/src/: config.js  index.js
orchestrator/src/db/: pool.js  queries.js
orchestrator/src/lib/: proxyFetch.js  quest-pipeline.js  quest-simulator.js  sse.js  wrapped.js
orchestrator/src/locus/: index.js  mock.js  real.js
orchestrator/src/routes/: quest.js  webhooks.js
quest-runtime/: Dockerfile  README.md  pyproject.toml
quest-runtime/src/: main.py  timeline.py
quest-runtime/src/phases/: __init__.py  checkout.py  hunt.py  plan.py  settle.py  shortlist.py
